# folly

./: .gitignore  Makefile.am  OVERVIEW  configure.ac  test
src/: .gitignore  Makefile.am  buffer.c  buffer.h  data.c  data.h  fmt.c  fmt.h  ht.c  ht.h  ht_builtins.c  ht_builtins.h  lexer.c  lexer.h  lexer_io.c  lexer_io.h  linked_list.c  linked_list.h  log.c  log.h  main.c  mm.c  mm.h  parser.h  runtime.c  runtime.h  smalloc.c  smalloc.h  str.c  str.h  type.c  type.h
src/modules/: file.c  file.h  list.c  list.h  object.c  object.h
test/: basic_syntax  boolean_operations  clone  clone_advanced  closure  closure2  complex_functions  conditional_simple  conditional_simple2  deref  equality  extension  fib  fib_fast  fib_orig  file_open  file_read  function_introspection  function_scope  functions  hash_literal  hash_literal_plus  inheritance  list  list_filter  list_ops  math  native_add  native_print  new_functions  object_foreach  objects  recursion  simple_assignment  simple_assignment_hash  to_string  while
tests/: Makefile.am  check_ht.c
